# rust_sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  MODULE_CREATION_GUIDE.md  README.md  build.rs
.cursor/rules/: tests.mdc
docs/: MESSAGE_MODULE.md  model_manager.md  service_integration.md
examples/: cache_example.rs  database_module.rs  message_example.rs  model_generation_example.rs  standalone_db.rs  tcp_example.rs
pywatt_macros/: Cargo.toml
pywatt_macros/src/: lib.rs
scripts/: test_with_docker.sh
src/: announce.rs  announce_tests.rs  bootstrap.rs  bootstrap_tests.rs  build.rs  builder.rs  database_tests.rs  error.rs  ext.rs  feature_tests.rs  handshake.rs  internal_messaging.rs  ipc.rs  ipc_process_tests.rs  ipc_proxy_tests.rs  ipc_tests.rs  jwt_auth_compat.rs  lib.rs  logging.rs  logging_tests.rs  macros.rs  message.rs  router_discovery.rs  router_discovery_tests.rs  secrets.rs  server.rs  server_tests.rs  state.rs  state_tests.rs  tcp_channel.rs  tcp_types.rs  typed_secret.rs  utils.rs
src/cache/: file.rs  in_memory.rs  memcached.rs  mod.rs  patterns.rs  proxy_service.rs  redis.rs  redis.rs.bak  tests.rs
src/communication/: mod.rs
src/communication/http_ipc/: mod.rs
src/communication/http_tcp/: mod.rs
src/communication/ipc_types/: mod.rs
src/core/: mod.rs
src/data/: mod.rs
src/data/cache/: mod.rs
src/data/database/: mod.rs
src/database/: mod.rs  mysql.rs  postgres.rs  proxy_connection.rs  sqlite.rs  tests.rs
src/http_ipc/: mod.rs  result.rs
src/http_tcp/: client.rs  mod.rs  router.rs
src/internal/: mod.rs
src/internal/pywatt_macros/: mod.rs
src/ipc_types/: mod.rs
src/jwt_auth/: error.rs  middleware.rs  mod.rs  proxy_adapter.rs  tests.rs
src/model_manager/: config.rs  definitions.rs  errors.rs  generator.rs  integration_tests.rs  mod.rs  sdk_integration.rs
src/model_manager/adapters/: mod.rs  mysql_adapter.rs  postgres_adapter.rs  sqlite_adapter.rs  trait_def.rs
src/pywatt_macros/: mod.rs
src/registration/: mod.rs  models.rs
src/secret_client/: client.rs  error.rs  logging.rs  mod.rs  schema.rs  stdout.rs
src/secret_provider/: errors.rs  events.rs  metrics.rs  mod.rs  tracing.rs
src/secret_provider/providers/: chained_provider.rs  env_provider.rs  file_provider.rs  memory_provider.rs  mod.rs
src/security/: mod.rs
src/security/jwt_auth/: mod.rs
src/security/secret_client/: mod.rs
src/security/secret_provider/: mod.rs
src/security/secrets/: mod.rs
src/services/: mod.rs
src/services/model_manager/: mod.rs
src/services/registration/: mod.rs
